custom-kube/do-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: dm-rag-quarkus
  name: dm-rag-quarkus
  namespace: k8tips
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - dm-rag-quarkus.do.techravenconsulting.cloud
      secretName: dm-rag-quarkus-tls
  ingressClassName: nginx
  rules:
    - host: dm-rag-quarkus.do.techravenconsulting.cloud
      http:
        paths:
          - backend:
              service:
                name: dm-rag-quarkus
                port:
                  number: 80
            path: /
            pathType: Prefix


#  tls:
#    - hosts:
#        - dm-rag-quarkus.dev.techravenconsulting.cloud
#       secretName: wildcard
